# library-manager

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  SPECIFICATION.md  docker-compose.yml  pyproject.toml
config/: settings.py  urls.py
